# mpdfin

./: Cargo.toml  Config.cs  Database.cs  Mpdfin.sln  Program.cs  mpdfin-net.csproj  mpdfin-net.sln
Mpd/: ClientStream.cs  CommandHandler.cs  Error.cs  Extensions.cs  Request.cs  Response.cs
Mpdfin/: Config.cs  Database.cs  Imports.cs  JellyfinClient.cs  Mpdfin.csproj  Program.cs  SerializationContext.cs  Subsystem.cs  Using.cs
Mpdfin.MediaKeys/: Cargo.toml
Mpdfin.MediaKeys/src/: error.rs  lib.rs
Mpdfin.MediaKeys/tests/: bindings.rs
Mpdfin.Tests/: GlobalUsings.cs  Mpdfin.Tests.csproj  Parsing.cs
Mpdfin/Database/: Database.cs  Filesystem.cs  Storage.cs
Mpdfin/Interop/: MediaKeysController.cs
Mpdfin/MediaKeys/: MediaKeysController.cs
Mpdfin/MediaKeys/Linux/: MediaPlayer2.cs  Mpris.DBus.cs  Player.cs
Mpdfin/Mpd/: ClientNotificationsReceiver.cs  ClientStream.cs  CommandHandler.cs  Constants.cs  Error.cs  Extensions.cs  Filter.cs  Request.cs  Response.cs  Tag.cs
Mpdfin/Mpd/ClientCommandHandler/: CommandHandler.cs  Status.cs
Mpdfin/Mpd/CommandHandler/: CommandHandler.cs  Connection.cs  Database.cs  Output.cs  Playback.cs  Queue.cs  Reflection.cs  Status.cs  StoredPlaylists.cs
Mpdfin/Player/: Player.cs  Queue.cs  QueueItem.cs  Song.cs  State.cs
Player/: Player.cs  Song.cs
benches/: parsing.rs
mediakeys-rust/src/: lib.rs
src/: config.rs  lib.rs  main.rs
src/database/: auth.rs  mod.rs  music_storage.rs  storage.rs  tree.rs
src/jellyfin/: base.rs  error.rs  items.rs  mod.rs  user.rs
src/mpd/: commands.rs  connection.rs  error.rs  filters.rs  mod.rs  model.rs  request.rs  response.rs  serializer.rs  subsystem.rs  tag.rs
src/mpd/filters/: eval.rs  mod.rs  parser.rs
src/mpd/server/: mod.rs
src/mpd/server/commands/: connection.rs  database.rs  mod.rs  playback.rs  playlist.rs  playlists.rs  queue.rs  status.rs
src/playback_server/: audio_server.rs  events.rs  mod.rs  options.rs  queue.rs
src/player/: event.rs  mod.rs  state.rs
