[package]
name = "mpdfin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
anyhow = "1.0.57"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# chrono = "0.4"
toml = "0.5.9"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
souvlaki = "0.5.1"
dirs = "4.0.0"
async-trait = "0.1.61"
strum = { version = "0.24.0", features = ["derive"] }
libmpv = "2.0.1"

jellyfin-client = { git = "https://github.com/ilyazzz/jellyfin-client-rs" }
