[package]
name = "mpdfin"
edition = "2021"
version = "0.1.0"

[dependencies]
async-executor = "1.11.0"
async-net = "2.0.0"
async-channel = "2.2.1"
event-listener = "5.3.0"
async-signal = "0.2.6"
blocking = "1.5.1"
futures-lite = "2.3.0"

gstreamer-player = "0.22.0"
gstreamer = "0.22.5"
souvlaki = "0.7.3"

toml = "0.8.8"
dirs = "5.0.1"

serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"
strum = { version = "0.26.2", features = ["derive"] }
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }

log = "0.4.21"
simple_logger = "4.3.3"

ureq = { version = "2.9.6", features = ["json"] }

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
strip = true
lto = true

[[bench]]
name = "parsing"
harness = false
